// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseSegmentCard > Snapshot Tests > should match snapshot with all fields 1`] = `
<a
  class="block"
  data-discover="true"
  href="/courses/course-1/modules/segment-1"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          class="flex items-start gap-3 flex-1"
        >
          <div
            class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
          >
            1
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <h3
              class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
            >
              Introduction to TypeScript
            </h3>
            <p
              class="text-sm text-muted-foreground line-clamp-2 mt-1"
            >
              Learn the basics of TypeScript and type safety
            </p>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 items-end flex-shrink-0"
        >
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
          >
            Video
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div
        class="flex flex-wrap gap-4 text-sm text-muted-foreground"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span>
            30m
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-hash h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
          <span>
            Pass: 
            70
            %
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span>
            Has Content
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <span>
            Unlimited attempts
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`CourseSegmentCard > Snapshot Tests > should match snapshot without optional display flags 1`] = `
<a
  class="block"
  data-discover="true"
  href="/courses/course-1/modules/segment-1"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          class="flex items-start gap-3 flex-1"
        >
          <div
            class="flex-1 min-w-0"
          >
            <h3
              class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
            >
              Introduction to TypeScript
            </h3>
            <p
              class="text-sm text-muted-foreground line-clamp-2 mt-1"
            >
              Learn the basics of TypeScript and type safety
            </p>
          </div>
        </div>
        <div
          class="flex flex-col gap-2 items-end flex-shrink-0"
        />
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <div
        class="flex flex-wrap gap-4 text-sm text-muted-foreground"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-clock h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          <span>
            30m
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-hash h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
          <span>
            Pass: 
            70
            %
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          <span>
            Has Content
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <span>
            Unlimited attempts
          </span>
        </div>
      </div>
    </div>
  </div>
</a>
`;
